--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
-css
+* {
+    box-sizing: border-box;
+  }
+  body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+.header {
+    margin: 0;
+    background: gold;
+    padding: 10px;
+    }
+#menu {
+    position: relative;
+}
+#menu-nav {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+}
+#menu-nav a {
+    text-decoration: none;
+    margin-left: 10px;
+    }
+#menu-nav a:visited {
+    color: brown;
+    }
+#menu-nav a:hover {
+    color: blue;
+    text-decoration: overline;
+    transition: 4s;        
+    }
