--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-family: "Inter"; 
 
 }
 .header {
+    position: fixed;
     margin: 0;
-    background: gold;
+    background: #808080;
     padding: 10px;
+    width: 100%;
     }
 #menu {
     position: relative;
@@ -26,12 +29,99 @@
 #menu-nav a {
     text-decoration: none;
     margin-left: 10px;
-    }
-#menu-nav a:visited {
-    color: brown;
+    color: white;
     }
 #menu-nav a:hover {
-    color: blue;
+    font-size: 105%;
     text-decoration: overline;
-    transition: 4s;        
+    transition: 0.5s;  
+    color: black;      
     }
+.main {
+ 
+    
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    max-width: 500px;
+
+}
+#nameId {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+}
+#personalInf {
+    color: white;
+    background-color: black;
+    list-style: none;
+     display: block;
+     text-align: center;
+     margin-left: auto;
+     margin-right: auto;
+     margin-top: 10px;
+     margin-bottom: 15px;
+     font-size: 32px;
+     width: 500px;
+     max-width: 100%;
+    
+      
+ }
+#personalId {
+    list-style: none;
+    font-size: 15px;
+    margin: 0;
+    text-align: center;
+    padding: 0;
+}
+#textAboutMe {
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    
+}
+#contacts {
+    color: white;
+    background-color: black;
+    list-style: none;
+     display: block;
+     text-align: center;
+     margin-left: auto;
+     margin-right: auto;
+     margin-top: 10px;
+     margin-bottom: 15px;
+     font-size: 32px;
+     width: 500px;
+     max-width: 100%;
+}
+.ico{
+    display: flex;
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    max-width: 500px;
+
+    }
+#idIcon {
+    font-size: 14px;
+    list-style: none;
+    margin-left: auto;
+    margin-right: auto;
+    }
+#icosvg {
+    width: 32px;
+    
+}
+@font-face {
+    font-family: "Inter"; 
+    src: url("../fonts/Inter.ttf") format("truetype"); 
+    font-style: normal; 
+    font-weight: normal; 
+    } 
