--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 
 }
 .header {
-    position: fixed;
     margin: 0;
     background: #808080;
     padding: 10px;
@@ -27,6 +26,7 @@
     justify-content: center;
 }
 #menu-nav a {
+    font-size: 14px;
     text-decoration: none;
     margin-left: 10px;
     color: white;
@@ -114,7 +114,15 @@ img {
     list-style: none;
     margin-left: auto;
     margin-right: auto;
-    }
+        }
+#idIcon a{
+            text-decoration: none;
+            color: black;
+        }
+#idIcon a:hover {
+            text-decoration: underline;
+        }        
+        
 #icosvg {
     width: 32px;
     
@@ -137,6 +145,53 @@ img {
     padding: 0;
     list-style: none;
     text-align: center;
+}
+#code {
+    color: white;
+    background-color: black;
+    list-style: none;
+     display: block;
+     text-align: center;
+     margin-left: auto;
+     margin-right: auto;
+     margin-top: 10px;
+     margin-bottom: 15px;
+     font-size: 32px;
+     width: 500px;
+     max-width: 100%;  
+}
+#codetext {
+    text-align: center;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: column;
+}
+#experience {
+    color: white;
+    background-color: black;
+    list-style: none;
+     display: block;
+     text-align: center;
+     margin-left: auto;
+     margin-right: auto;
+     margin-top: 10px;
+     margin-bottom: 15px;
+     font-size: 32px;
+     width: 500px;
+     max-width: 100%;  
+}
+#experiencelink {
+    text-align: center;
+    font-size: 24px;
+}
+#experiencelink a{
+    text-decoration: none;
+    color: black;
+}
+#experiencelink a:hover {
+    font-size: 105%;
+    text-decoration: underline;
 }
 @font-face {
     font-family: "Inter"; 
