--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 .header {
     margin: 0;
-    background: #808080;
+    background: black;
     padding: 10px;
     width: 100%;
     }
@@ -192,6 +192,23 @@ img {
 #experiencelink a:hover {
     font-size: 105%;
     text-decoration: underline;
+}
+#english {
+    color: white;
+    background-color: black;
+    list-style: none;
+     display: block;
+     text-align: center;
+     margin-left: auto;
+     margin-right: auto;
+     margin-top: 10px;
+     margin-bottom: 15px;
+     font-size: 32px;
+     width: 500px;
+     max-width: 100%;  
+}
+#enText {
+    text-align: center;
 }
 @font-face {
     font-family: "Inter"; 
